Aligned items correctly in navbar

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,19 +1,40 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  align-items:center;
+  padding:10px;
+ 
+  
+  
 }
 
+.header .left-links {
+  margin-right:auto;
+  
+  
+}
+.header .right-links{
+  margin-left:auto;
+}
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-left:auto;
+  margin-right:auto;
+
+ 
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  
+  
 }
 
 a {
@@ -22,4 +43,7 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin:2px;
+
 }
+
